[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
actix-web = "4.0.0-beta.12"
actix-rt = "2.5.0"
serde = "1.0"
log = "0.4"
env_logger = "0.9"
